--- a/style.css
+++ b/style.css
@@ -25,7 +25,10 @@ input, button, textarea, select{
     font: inherit;
 }
 
-
+h6{
+    color: white;
+    font-size: 100%;
+}
 
 
 :root{
@@ -59,6 +62,7 @@ input, button, textarea, select{
     padding: .5rem 4rem;
     border-radius: 1.25rem;
     transition: all 200ms ease;
+    color: white;
 }
 
 .start-btn:hover{
